@@ -1,16 +1,16 @@
 /*
  * Copyright (C) 2006-2016 Christopho, Solarus - http://www.solarus-games.org
- * 
+ *
  * Solarus is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
  * the Free Software Foundation, either version 3 of the License, or
  * (at your option) any later version.
- * 
+ *
  * Solarus is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  * GNU General Public License for more details.
- * 
+ *
  * You should have received a copy of the GNU General Public License along
  * with this program. If not, see <http://www.gnu.org/licenses/>.
  */
@@ -31,6 +31,8 @@ enum class Ability {
   SHIELD,                 /**< Allows to stop attacks from enemies. */
   LIFT,                   /**< Lifting destructible objects. */
   SWIM,                   /**< Swimming in deep water. */
+  JUMP_OVER_WATER,        /**< Automatically jumping when arriving in water
+                           * without the SWIM ability. */
   RUN,                    /**< Running faster. */
   DETECT_WEAK_WALLS,      /**< Be notified of weak walls nearby. */
 };
